LinKreta_POC_Repository/force-app/main/default/objects/New_Client_Current_Complete_Step__mdt/New_Client_Current_Complete_Step__mdt.object-meta.xml
<CustomObject>
    <label>New Client Current/Complete Step</label>
    <pluralLabel>New Client Current/Complete Steps</pluralLabel>
</CustomObject>