LinKreta_POC_Repository/force-app/main/default/objects/New_Client_Current_Complete_Step__mdt/fields/Add_Client_Background__c.field-meta.xml
<CustomField>
    <fullName>Add_Client_Background__c</fullName>
    <label>Add Client Background</label>
    <length>100</length>
    <type>Text</type>
</CustomField>