LinKreta_POC_Repository/force-app/main/default/objects/New_Client_Current_Complete_Step__mdt/fields/Add_Industry__c.field-meta.xml
<CustomField>
    <fullName>Add_Industry__c</fullName>
    <label>Add Industry</label>
    <length>255</length>
    <type>Text</type>
</CustomField>