LinKreta_POC_Repository/force-app/main/default/objects/New_Client_Current_Complete_Step__mdt/fields/Add_Next_Steps_and_Recommendations__c.field-meta.xml
<CustomField>
    <fullName>Add_Next_Steps_and_Recommendations__c</fullName>
    <label>Add Next Steps and Recommendations</label>
    <length>255</length>
    <type>Text</type>
</CustomField>