LinKreta_POC_Repository/force-app/main/default/objects/New_Client_Current_Complete_Step__mdt/fields/Add_Prospect_Email_Phone_Address__c.field-meta.xml
<CustomField>
    <fullName>Add_Prospect_Email_Phone_Address__c</fullName>
    <label>Add Prospect Email Phone Address</label>
    <length>50</length>
    <type>Text</type>
</CustomField>