LinKreta_POC_Repository/force-app/main/default/objects/New_Client_Current_Complete_Step__mdt/fields/Add_Remarks__c.field-meta.xml
<CustomField>
    <fullName>Add_Remarks__c</fullName>
    <label>Add Remarks</label>
    <length>100</length>
    <type>Text</type>
</CustomField>