LinKreta_POC_Repository/force-app/main/default/objects/New_Client_Current_Complete_Step__mdt/fields/Add_Sector__c.field-meta.xml
<CustomField>
    <fullName>Add_Sector__c</fullName>
    <label>Add Sector</label>
    <length>50</length>
    <type>Text</type>
</CustomField>