LinKreta_POC_Repository/force-app/main/default/objects/New_Client_Current_Complete_Step__mdt/fields/Add_Solution_Expertise__c.field-meta.xml
<CustomField>
    <fullName>Add_Solution_Expertise__c</fullName>
    <label>Add Solution &amp; Expertise</label>
    <length>50</length>
    <type>Text</type>
</CustomField>