LinKreta_POC_Repository/force-app/main/default/objects/New_Client_Current_Complete_Step__mdt/fields/Assign_New_Client_owner__c.field-meta.xml
<CustomField>
    <fullName>Assign_New_Client_owner__c</fullName>
    <label>Assign New Client owner</label>
    <length>50</length>
    <type>Text</type>
</CustomField>