LinKreta_POC_Repository/force-app/main/default/objects/New_Client_Current_Complete_Step__mdt/fields/Choose_Expertise__c.field-meta.xml
<CustomField>
    <fullName>Choose_Expertise__c</fullName>
    <label>Choose Expertise</label>
    <length>255</length>
    <type>Text</type>
</CustomField>