LinKreta_POC_Repository/force-app/main/default/objects/New_Client_Current_Complete_Step__mdt/fields/Client_Council_Approval__c.field-meta.xml
<CustomField>
    <fullName>Client_Council_Approval__c</fullName>
    <label>Client Council Approval</label>
    <length>100</length>
    <type>Text</type>
</CustomField>