LinKreta_POC_Repository/force-app/main/default/objects/New_Client_Current_Complete_Step__mdt/fields/Complete_meeting_with_BUEL_SC__c.field-meta.xml
<CustomField>
    <fullName>Complete_meeting_with_BUEL_SC__c</fullName>
    <label>Complete meeting with BUEL/SC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>