LinKreta_POC_Repository/force-app/main/default/objects/New_Client_Current_Complete_Step__mdt/fields/Growth_Potential_Of_Client__c.field-meta.xml
<CustomField>
    <fullName>Growth_Potential_Of_Client__c</fullName>
    <label>Growth Potential Of Client</label>
    <length>100</length>
    <type>Text</type>
</CustomField>