LinKreta_POC_Repository/force-app/main/default/objects/New_Client_Current_Complete_Step__mdt/fields/How_did_you_arrive_at_this_tentative_fee__c.field-meta.xml
<CustomField>
    <fullName>How_did_you_arrive_at_this_tentative_fee__c</fullName>
    <label>How did you arrive at this tentative fee</label>
    <length>100</length>
    <type>Text</type>
</CustomField>