LinKreta_POC_Repository/force-app/main/default/objects/New_Client_Current_Complete_Step__mdt/fields/Navigate_to_Client_page_for_DS_Approval__c.field-meta.xml
<CustomField>
    <fullName>Navigate_to_Client_page_for_DS_Approval__c</fullName>
    <label>Navigate to Client page for DS Approval</label>
    <length>255</length>
    <type>Text</type>
</CustomField>