LinKreta_POC_Repository/force-app/main/default/objects/New_Client_Current_Complete_Step__mdt/fields/Navigate_to_WCGT_for_Pipeline_creation__c.field-meta.xml
<CustomField>
    <fullName>Navigate_to_WCGT_for_Pipeline_creation__c</fullName>
    <label>Navigate to WCGT for Pipeline creation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>