LinKreta_POC_Repository/force-app/main/default/objects/New_Client_Current_Complete_Step__mdt/fields/NSL_approval__c.field-meta.xml
<CustomField>
    <fullName>NSL_approval__c</fullName>
    <label>NSL approval</label>
    <length>50</length>
    <type>Text</type>
</CustomField>