LinKreta_POC_Repository/force-app/main/default/objects/New_Client_Current_Complete_Step__mdt/fields/Select_Enquiry_Type__c.field-meta.xml
<CustomField>
    <fullName>Select_Enquiry_Type__c</fullName>
    <label>Select Enquiry Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>