LinKreta_POC_Repository/force-app/main/default/objects/New_Client_Current_Complete_Step__mdt/fields/Summary_Challenges_Opportunities_etc__c.field-meta.xml
<CustomField>
    <fullName>Summary_Challenges_Opportunities_etc__c</fullName>
    <label>Summary (Challenges, Opportunities etc)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>