LinKreta_POC_Repository/force-app/main/default/objects/New_Client_Current_Complete_Step__mdt/fields/Tentative_Fee__c.field-meta.xml
<CustomField>
    <fullName>Tentative_Fee__c</fullName>
    <label>Tentative Fee</label>
    <length>100</length>
    <type>Text</type>
</CustomField>